--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -41,7 +41,7 @@ privacy_pack = false
 
 # Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
 #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-date_format = "Mon, Jan 2, 2006"
+date_format = "Jan 2, 2006"
 #   Examples: "3:04 pm" or "15:04"
 time_format = "15:04 PM"
 
@@ -50,7 +50,7 @@ time_format = "15:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "test@example.org"
+email = "schwabacher@u.northwestern.edu"
 phone = ""
 address = ""
 
