--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,6 +8,11 @@
   url = "#about"
   weight = 10
 
+[[main]]
+  name = "Bio"
+  url = "/bio"
+weight = 20
+
 #[[main]]
  # name = "Posts"
  # url = "#posts"
@@ -26,17 +31,17 @@
 [[main]]
   name = "Research"
   url = "/research"
-  weight = 20
+  weight = 80
 
 [[main]]
   name = "Teaching"
   url = "/teaching"
-  weight = 30
+  weight = 90
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 100
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
