--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -31,12 +31,17 @@ weight = 20
 [[main]]
   name = "Research"
   url = "/research"
-  weight = 80
+  weight = 70
 
 [[main]]
   name = "Teaching"
   url = "/teaching"
-  weight = 90
+  weight = 80
+
+[[main]]
+  name = "Engagement"
+  url = "/engagement"
+weight = 90
 
 [[main]]
   name = "Contact"
