--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,22 +11,12 @@
 [[main]]
   name = "Bio"
   url = "/bio"
-weight = 20
+  weight = 20
 
-#[[main]]
- # name = "Posts"
- # url = "#posts"
- # weight = 20
-
-#[[main]]
- # name = "Projects"
- # url = "#projects"
- # weight = 30
-
-#[[main]]
- # name = "Publications"
- # url = "#featured"
- # weight = 40
+[[main]]
+  name = "Blog"
+  url = "/posts"
+  weight = 30
 
 [[main]]
   name = "Research"
@@ -44,13 +34,18 @@ weight = 20
 weight = 90
 
 [[main]]
+  name = "Leadership"
+  url = "/leadership"
+weight = 95
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 100
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+[[main]]
+    name = "CV"
+    url = "files/cv.pdf"
+    weight = 110
