--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,30 +13,30 @@
   url = "/bio"
   weight = 20
 
-[[main]]
-  name = "Blog"
-  url = "/post"
-  weight = 30
+##[[main]]
+  #name = "Blog"
+  #url = "/post"
+  #weight = 30
 
 [[main]]
   name = "Research"
   url = "/research"
   weight = 70
 
-[[main]]
-  name = "Teaching"
-  url = "/teaching"
-  weight = 80
+#[[main]]
+##  name = "Teaching"
+##  url = "/teaching"
+##  weight = 80
 
 [[main]]
   name = "Engagement"
   url = "/engagement"
 weight = 90
 
-[[main]]
-  name = "Leadership"
-  url = "/leadership"
-weight = 95
+#[[main]]
+ ## name = "Leadership"
+ ## url = "/leadership"
+##weight = 95
 
 [[main]]
   name = "Contact"
