--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -25,8 +25,6 @@ disqusShortname = ""
 ## Advanced options below ##
 ############################
 
-# Name of Academic theme folder in `themes/`.
-theme = "academic"
 
 # Get last modified date for content from Git?
 enableGitInfo = false
@@ -65,3 +63,39 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+
+#[module]
+#  [[module.imports]]
+#    path = "github.com/wowchemy/wowchemy-hugo-themes/netlify-cms-academic"
+#  [[module.imports]]
+#    path = "github.com/wowchemy/wowchemy-hugo-themes/wowchemy"
+
+[module]
+  [[module.imports]]
+    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5"
+  [[module.imports]]
+    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5"
+
+#module:
+#  imports:
+#    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5
+#    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
+
+#security:
+#  funcs:
+#    getenv:
+#      - ^HUGO_
+#      - ^WC_
+
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$']
+    osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
+
+  [security.funcs]
+    getenv = ['^HUGO_', '^WC_']
+
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
